--- a/app/globals.css
+++ b/app/globals.css
@@ -95,6 +95,7 @@
   --sidebar-ring: oklch(0.708 0 0);
   --button-ripple-color: oklch(0.145 0 0 / 0.3);
   --font-raleway: 'Raleway', sans-serif;
+  --font-instrument-serif: 'Instrument Serif', serif;
 }
 
 .dark {
@@ -143,4 +144,8 @@
 
 .font-raleway {
   font-family: var(--font-raleway);
+}
+
+.font-instrument-serif {
+  font-family: var(--font-instrument-serif);
 }
